@@ -136,6 +136,8 @@ bridge_pre_start() {
 		iface="${!briface}"
 	else
 		ports="${!ports}"
+		# We are the bridge, so set our base metric to 1000.
+		metric=1000
 	fi
 
 	# Create the bridge if needed
