@@ -27,6 +27,9 @@ iptunnel_pre_start() {
 	eval opts="iptunnel_${ifvar}"
 	[[ -z ${!opts} ]] && return 0
 
+	# Set our base metric to 1000
+	metric=1000
+	
 	ebegin "Creating tunnel ${iface}"
 	interface_tunnel add "${iface}" ${!opts}
 	eend "$?"
