@@ -62,6 +62,10 @@ tuntap_pre_start() {
 	tuntap_check_kernel || return 1
 
 	ebegin "Creating Tun/Tap interface ${iface}"
+
+	# Set the base metric to 1000
+	metric=1000
+	
 	if [[ -x /usr/sbin/openvpn ]] ; then
 		openvpn --mktun --dev-type "${!tuntap}" --dev "${iface}" \
 			> /dev/null
